--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ text-shadow: -1px -3px 5px #1eff00;
 transition: font-size 4s  ease-in;}
 
 #healing {
+    font-family:"ft88gothique";
    border: 20px dotted greenyellow;
 }
 
